More api endpoints
add profile update endpoint
add reminder endpoints
add delete single entry endpoint
update swagger doc
update test to cover newly added endpoints
